--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
       border-top: 1px solid #ddd;
       font-size: 0.9rem;
     }
-    /* Botón grande en móviles */
     button {
       font-size: 1.1rem;
       padding: 0.8rem;
@@ -91,7 +90,7 @@
         </p>
 
         <figure>
-          <img src="https://oaidalleapiprodscus.blob.core.windows.net/private/org-CXkHhOcfyK2ogT5VqOkLrKqA/user-wqHX2A27sOBN6Zz6y8oiYpTn/img-ae3c84ca-61d7-4d7a-8b5d-af16fe0f45ab-1891395024.png?st=2025-09-24T22%3A48%3A54Z&se=2025-09-25T00%3A48%3A54Z&sp=r&sv=2021-08-06&sr=b&sig=KXU6RAXdC6UzGQk2rX7Th7JUmcPXVdAh%2FM0gVQ5ArEw%3D" alt="Equipo contable trabajando">
+          <img src="img/foto1.jpg" alt="Foto contable">
           <figcaption><a href="#" target="_blank">Conoce más sobre nuestro equipo</a></figcaption>
         </figure>
 
